src/web/scss/main.scss
/* ... */
.sidebar .nav-stacked > li + li {
    margin-top: 0;
}

.sidebar .nav span {
    color: #777;
    float: right;
    font-size: .844rem;
    padding-top: 3px;
}

/* Page wrapper */
.wrapper {
    margin: 0 auto;
    max-width: $screen-sm-min;
    padding: 0 $grid-gutter-width $grid-gutter-width $grid-gutter-width;
}
// Wide wrapper used in admin pages.
.wide-wrapper {
    padding: 0 $grid-gutter-width $grid-gutter-width $grid-gutter-width;
}

/**
 * Pages
 */

.cta {
	border-top: 1px solid #dedede;
	text-align: center;
}

@media only screen and (min-width: 992px) {
	.cta {
		text-align: left;
	}
}

.cta h3 {
	font-size: 1.777rem;
	font-weight: 400;
	margin: 0 0 1.5rem;
}

@media only screen and (min-width: 992px) {
	.cta h3 {
		font-size: 2.369rem;
		margin: 0;
		padding-top: .317rem;
		text-align: right;
	}
}

.cta p {
	margin-bottom: .75rem;
}

@media only screen and (min-width: 992px) {
	.cta .wrapper {
		padding-top: 3.157rem;
		padding-bottom: 3.157rem;
	}
}

.cta .btn + .btn {
	margin: .75rem 0 0;
}

@media only screen and (min-width: $screen-sm-min) {
	.cta .btn + .btn {
		margin: 0 0 0 10px;
	}
}

.package-group {
    margin-bottom: 1.5rem;
}

.section-title {
    font-family: franklin-gothic-urw-comp, 'arial narrow', 'helvetica neue', helvetica, sans-serif;
    font-size: 2.369rem;
    font-weight: 400;
    margin-bottom: 1.5rem;
    text-align: center;
}

@media only screen and (min-width: $screen-sm-min) {
    .section-title {
        font-size: 4.209rem;
        margin-bottom: 2rem;
    }
}

.used-by {
    text-align: center;
}

.used-by-packages {
    border-top: 1px solid #dedede;
}

.used-by .wrapper {
    border-top: 1px solid #dedede;
}

@media only screen and (min-width: $screen-sm-min) {
    .used-by .wrapper {
        padding-top: 4.209rem;
        padding-bottom: 4.209rem;
    }
}

.used-by-packages .wrapper {
    border: 0;
}

.used-by-heading {
    color: #999;
    font-size: 1rem;
    font-weight: 400;
    margin-bottom: 1.5rem;
    text-align: center;
}

@media only screen and (min-width: $screen-sm-min) {
    .used-by-heading {
        font-size: 1.333rem;
    }
}

.used-by .used-by-heading {
    margin-bottom: 2rem;
}

.used-by-logos {
    list-style: none;
    padding: 0;
    text-align: center;
}

@media only screen and (min-width: $screen-sm-min) {
    .used-by-logos {
        margin: 0 -15px;
    }
}

.used-by-logos li {
    margin-bottom: 1rem;
    text-align: center;
}

@media only screen and (min-width: $screen-sm-min) {
    .used-by-logos li {
        display: inline-block;
        height: 58px;
        padding: 0 15px;
    }
}

.used-by-logos img {
    opacity: .75;
}

.used-by-logos .eventbrite img {
    height: 52px;
    width: 170px;
}

.used-by-logos .google img {
    height: 58px;
    width: 170px;
}

.used-by-logos .moo img {
    height: 56px;
    width: 170px;
}

.used-by-logos .spotify img {
    height: 51px;
    width: 170px;
}

.used-by-logos .uber img {
    height: 24px;
    width: 170px;
}

/* Gallery */
.budget-range {
    font-size: .844rem;
    margin-bottom: 0;
    overflow: hidden;
}

@media only screen and (min-width: $screen-sm-min) {
    .filter-form {
        margin-top: 3.375rem;
    }
}

@media only screen and (min-width: $screen-sm-min) {
    .filter-package {
        display: block !important;
    }
}

.form-group.filter-package-budget {
    margin: 2rem 0;
}

.filter-package-budget label {
    display: block;
}

.filter-selected {
    border: 1px solid #dedede;
    border-radius: 4px;
    font-size: 1.125rem;
    margin-bottom: 1rem;
    padding: .75rem 15px;
}

.filter-selected .close {
    padding-top: 3px;
}

.packages {
    font-size: 1rem;
    list-style: none;
    margin: 0 -15px 0;
    overflow: hidden;
    padding: 0;
}

.package {
    float: left;
    padding: 0 15px 15px;
    width: 50%;
}

@media only screen and (min-width: $screen-sm-min) {
    .package {
        padding-bottom: 30px;
    }
}

@media only screen and (min-width: $screen-sm-min) {
    .package {
        width: 33.333%;
    }
}

.package > a:first-child {
    display: block;
    position: relative;
}

.package a:hover,
.package a:focus,
.package a:active {
    text-decoration: none;
}

.package-image {
    background: 50% 50% no-repeat;
    background-size: cover;
    margin-bottom: .75rem;
    padding-bottom: 100%;
}

.package-image-wrap {
    position: relative;
}

.package-includes {
    list-style-type: disc;
    margin: 0;
    padding: 0 0 0 20px;
}

.package-includes-title {
    font-size: 1rem;
    font-weight: 400;
    margin: .75rem 0 .178rem;
}

.package-name {
    color: #428bca;
    font-size: 1.125rem;
    font-weight: 400;
    margin: 0;
}

.package a:hover .package-name,
.package a:focus .package-name,
.package a:active .package-name {
    color: #2a6496;
    text-decoration: underline;
}

.package-price {
    color: #444;
    font-size: .844rem;
}

@media only screen and (min-width: $screen-sm-min) {
    .package-price {
        background-color: #242157;
           -moz-border-radius: 50px;
        -webkit-border-radius: 50px;
                border-radius: 50px;
        color: #fff;
        font-size: 1.5rem;
        height: 90px;
        line-height: 1;
        opacity: .9;
        padding-top: 27px;
        position: absolute;
        top: 7px;
        right: 7px;
        text-align: center;
           -moz-transition: all .2s;
        -webkit-transition: all .2s;
                transition: all .2s;
        width: 90px;
    }
}

.package-price small {
    color: #777;
    font-size: 100%;
}

@media only screen and (min-width: $screen-sm-min) {
    .package-price small {
        color: rgba(255, 255, 255, .5);
        display: block;
        font-size: .844rem;
    }
}

.package a:hover .package-price,
.package a:focus .package-price,
.package a:active .package-price {
    opacity: 1;
}
/* ... */

